src/objects/Call_Record__c.object
<CustomObject>
    <description>This object is used to record all Call details against a Doctor/Facility.</description>
    <fields>
        <fullName>ANZ_ID__c</fullName>
        <externalId>true</externalId>
        <label>ANZ ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ablation_Catheter_2_Company__c</fullName>
        <label>Ablation Catheter 2 Company</label>
        <picklist>
            <picklistValues>
                <fullName>Bard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JNJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ablation_Catheter_2_Tip__c</fullName>
        <label>Ablation Catheter 2 Tip</label>
        <picklist>
            <picklistValues>
                <fullName>8mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact/Verisense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MG Enabled Safire BLU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MG Enabled Cool Path Duo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coolflex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Irrigated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ablation_Catheter_Company__c</fullName>
        <label>Ablation Catheter Company</label>
        <picklist>
            <controllingField>Mapping_Type__c</controllingField>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JNJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Ablation Performed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ablation_Catheter_Resterilised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ablation Catheter Resterilised?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ablation_Catheter_Tip__c</fullName>
        <label>Ablation Catheter Type</label>
        <picklist>
            <controllingField>Ablation_Catheter_Company__c</controllingField>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact/Verisense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coolflex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MG Enabled Cool Path Duo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MG Enabled Safire BLU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Irrigated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tacticath</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ablation_Type__c</fullName>
        <label>Ablation Type</label>
        <picklist>
            <picklistValues>
                <fullName>AF</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AFL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SVT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ablation__c</fullName>
        <label>Ablation</label>
        <picklist>
            <controllingField>Product_Group_Proced_Therapy__c</controllingField>
            <picklistValues>
                <fullName>Therpay Cool Path</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapy Cool Path Duo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safire BLU Duo Bi-D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapy Cool Flex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Therapy Cool Path Duo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart Touch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TactiCath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arctic Front</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Absorbable_Components_Described__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>1. Copolymer Anchor
2. Collagen Sponge
3. Positioning suture</inlineHelpText>
        <label>Absorbable Components Described</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <picklist>
            <controllingField>Product_Group_Proced_Therapy__c</controllingField>
            <picklistValues>
                <fullName>Agilis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_comments_Pre_Implant__c</fullName>
        <inlineHelpText>e.g. from echo report – regions of scar, regions of hypokinesis/hyperkinesis/akinesis, lateral wall movement, mitral regurgitation etc</inlineHelpText>
        <label>Additional comments Pre-Implant</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Angiographic_Considerations__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>1. Location - puncture access into CFA
2. Size - internal diameter of target vessel
3. Deterrents - disease, bifurcations, inguinal ligament</inlineHelpText>
        <label>Angiographic Considerations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approach_ANGLE_Text__c</fullName>
        <defaultValue>&quot;Remember your ANGLE works better if it is phrased as a question&quot;</defaultValue>
        <inlineHelpText>Use this field to record the Approach ANGLE you will use to engage the customer in this sales interaction if you selected &quot;other&quot; above.</inlineHelpText>
        <label>Approach ANGLE Text</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approach_ANGLE__c</fullName>
        <inlineHelpText>Use this field to list the Angle Question or statement you will use to engage the customer in this sales interaction.</inlineHelpText>
        <label>Approach ANGLE</label>
        <picklist>
            <controllingField>Campaign__c</controllingField>
            <picklistValues>
                <fullName>AF - In which patients are you most concerned about fluid overload?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF - Which aspect of a successful lesion do you find most challenging?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Although you don&apos;t follow up patients remotely now, how do you see your future clinics being managed?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - At what stage would you want to know about new patients with documented onset of AF via EGM&apos;s?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Dr. XXX is doing X with QRS measurements. What are your thoughts?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - How are you currently deciding the devices that you utilise during implants?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - How are you currently setting up your patients transmitters?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - How do you decide which of your patients is a candidate for MRI devices?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - How do you define response – and how do you know that is the pinnacle of their response?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - How do you determine which patients will benefit from CRT?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - How do you evaluate response in ischemic patients?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - How do you measure patient response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - How do you think technology and innovation has changed your practice/patient outcomes?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - How much previously undiagnosed AF do you see in PPM patients?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - How much time is taken up dealing with non-response in ischemic patients?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - In ischemic patients, if you could pace from 2 sites in the LV what would be the potential benefits?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - I was reading a PACE article which discussed QRS width and response?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - I was talking to Dr. X about an ischemic patient who is not responding to CRT. Why do you think this patient is so challenging?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - QRS width is an indicator for CRT. What are your thoughts on it as a predictor of response?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Studies that show 70-80% of patients respond to CRT therapy. Is that reflective of your practice?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - What are the challenges in CRT today</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - What are the key patient benefits you look for in a pacemaker?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - What are the patient groups that don’t respond well to CRT?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - What are your thoughts on lead position and how it relates to QRS width?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - What are your thoughts regarding remote monitoring of PPM patients?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - What do you believe are the outcomes of more effective CRT?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - What do you see as the standard of care for device patients?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - What is it about ischemic patients that make them so challenging?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - What is your current understanding of MRI technology and the limitations within the MZRI environment?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - What planning do you do in terms of where you are going to place the lead in ischemic patients?</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attachments__c</fullName>
        <defaultValue>&quot;1 month, 3 month and final follow up information, comments and images&quot;</defaultValue>
        <inlineHelpText>Attach all relevant documents to call record including pre &amp; post op EGMs and all available follow up information</inlineHelpText>
        <label>Attachments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bundle_Branch_Block__c</fullName>
        <label>Bundle Branch Block</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CP1_Able_to_Use_System__c</fullName>
        <label>CP1 Able to Use System</label>
        <picklist>
            <picklistValues>
                <fullName>Trainer operated system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could use with  Trainer guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used with minimal guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operated system unassisted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CP1_Physician_Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CP1 Physician Trainer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Records (CP1 Physician Trainer)</relationshipLabel>
        <relationshipName>Call_Records8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CP2_Able_to_use_system__c</fullName>
        <label>CP2 Able to use system</label>
        <picklist>
            <picklistValues>
                <fullName>Trainer operated system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could use Trainer guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used with minimal direction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully operated system</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CP2_Could_interpret_the_Image__c</fullName>
        <label>CP2 Could interpret the Image</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes with Guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes without guidance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CP2_Physician_Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this field to list the physician (if any) who was conducting the training</inlineHelpText>
        <label>CP2 Physician Trainer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Records (CP2 Physician Trainer)</relationshipLabel>
        <relationshipName>Call_Records9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CP3_Able_to_use_system__c</fullName>
        <label>CP3 Able to use system</label>
        <picklist>
            <picklistValues>
                <fullName>Trainer operated system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could use with  Trainer guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used with minimal guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operated system unassisted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CP3_Could_interpret_the_image__c</fullName>
        <label>CP3 Could interpret the image</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes with Guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes without guidance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CP3_Physician_Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CP3 Physician Trainer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Records (CP3 Physician Trainer)</relationshipLabel>
        <relationshipName>Call_Records4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CP4_Could_interpret_the_image__c</fullName>
        <label>CP4 Could interpret the image</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes with Guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes without guidance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CP5_Able_to_interpret_image__c</fullName>
        <label>CP5 Able to interpret image</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes with Guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes without guidance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CP6_Could_interpret_image__c</fullName>
        <label>CP6 Could interpret image</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes with Guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes without guidance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CP_Could_Interpret_Image__c</fullName>
        <label>CP! Could Interpret Image</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes with Guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes without guidance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRT_Indication__c</fullName>
        <inlineHelpText>Please select all appropriate indications</inlineHelpText>
        <label>CRT Indication</label>
        <picklist>
            <picklistValues>
                <fullName>Ischaemic Cardiomyopathy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-ischaemic Cardiomyopathy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AV block</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post AV node ablation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atrial Fibrillation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dilated Cardiomyopathy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congestive Heart Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypertrophic Cardiomyopathy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypertrophic Obstructive Cardiomyopathy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LBBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBBB</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CRT_of_Patients__c</fullName>
        <label>CRT # of Patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Objectives__c</fullName>
        <label>Call Objectives</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Status__c</fullName>
        <label>Call Status</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>Planning</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Education booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Education Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial completed - Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial completed - Unsuccessful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial Rebooked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <label>Call Type</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>Case Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journal Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Call</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Clinic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Programming</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Impact__c</fullName>
        <label>Campaign Impact</label>
        <picklist>
            <controllingField>Campaign__c</controllingField>
            <picklistValues>
                <fullName>Believes Birfurcation lesions are a complex PCI Subgroup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Believes OCT is a useful tool to assess this Bifurcation Stenting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comfortable troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Customer still not an SJM HV lead user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Customer will continue to implant Durata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Customer will move to Optisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Dr agreed to Product Design Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Dr comfortable with information and action required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Dr concerned about information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Dr extremely concerned, wants further follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Dr has declined Product Design Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Dr is considering Product Design Survey not committed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Undecided/non-committed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Usage/referrals will not change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Will decrease usage/referrals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM - Will increase usage/referrals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease Implants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease referrals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn&apos;t see the value in using OCT to guide Bifurcation stenting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr believes AGILE TIP is superior to G7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr believes he will be able to use more FFR in complex lesion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr doesn&apos;t believe the trial makes a difference to clinical practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr is assessing more 50-70% lesions due to increased risk of under treating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr less likely to opt with OMT alone when uncertain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr still believes PrimeWire Prestige Plus is a better PW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feel confident when setting up a case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feel unsure when setting up a case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feel unsure when trouble shooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increased use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>